# pkg/api/validation/v1beta1-swagger.json
@@ -1335,7 +1335,7 @@
    "v1beta1.ISCSIDisk": {
     "id": "v1beta1.ISCSIDisk",
     "required": [
-     "portal",
+     "targetIP",
      "iqn"
     ],
     "properties": {
@@ -1346,7 +1346,7 @@
       "type": "integer",
       "format": "int32"
      },
-     "portal": {
+     "targetIP": {
       "type": "string"
      },
      "readOnly": {
